--- a/views/views.xml
+++ b/views/views.xml
@@ -59,13 +59,14 @@
 
      <!-- ### Membuat Tampilan Tree/List ### -->
      
-    <record model="ir.ui.view" id="kursus_tree_view">
+    <record model="ir.ui.view" id="extracurricular_tree_view">
         <field name="name">xtracurricular.xtracurricular.tree</field>
         <field name="model">xtracurricular.xtracurricular</field>
         <field name="arch" type="xml">
-            <tree string="Kursus List">
-                <field name="name"/>
-                <field name="description"/>       
+            <tree string="Extracurricular List">
+                <field name="title"/>
+                <field name="advisor"/>
+                <field name="school_code"/>     
             </tree>
         </field>
     </record>
@@ -73,17 +74,19 @@
      
     <!-- ### Membuat Tampilan Form ### -->
      
-    <record model="ir.ui.view" id="kursus_form_view">
+    <record model="ir.ui.view" id="extracurricular_form_view">
         <field name="name">xtracurricular.xtracurricular.form</field>
         <field name="model">xtracurricular.xtracurricular</field>
         <field name="arch" type="xml">
-            <form string="Kursus Form">
+            <form string="Extracurricular Form">
                 <sheet>
                     <group>
-                        <field name="name"/>
+                        <field name="title"/>
+                        <field name="advisor"/>
+                        <field name="school_code"/>   
                     </group>
                     <notebook>
-                        <page string="Keterangan">
+                        <page string="Description">
                             <field name="description"/>
                         </page>
                     </notebook>
@@ -95,13 +98,13 @@
      
     <!-- ### Membuat Action/Event Object Kursus ### -->
      
-    <record model="ir.actions.act_window" id="kursus_list_action">
+    <record model="ir.actions.act_window" id="extracurricular_list_action">
         <field name="name">Xtracurricular</field>
         <field name="res_model">xtracurricular.xtracurricular</field>
         <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
         <field name="help" type="html">
-            <p class="oe_view_nocontent_create">COK</p>
+            <p class="oe_view_nocontent_create">Create a new quotation</p>
         </field>
     </record>    
      
@@ -116,7 +119,7 @@
      
     <!-- ### Membuat Sub Menu ### -->
      
-    <menuitem id="kursus_menu" name="Xtracurricular" parent="training_odoo_menu" action="kursus_list_action"/>
+    <menuitem id="extracurricular_menu" name="Xtracurricular" parent="training_odoo_menu" action="extracurricular_list_action"/>
  
   </data>
 </odoo>
